attempt to fix page jump on title size change

--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -12,13 +12,6 @@
     font-size: 1.9rem;
 }
 
-.enp-tree__state--question,
-.enp-tree__state--end {
-    .enp-tree__title--tree {
-        font-size: 1.2rem;
-    }
-}
-
 .enp-tree__state--intro {
     @include breakpoint($mobile-large) {
         .enp-tree__title--tree {
